--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,7 +12,9 @@
     <script src ="tela.js"></script>
     <script src ="cobra.js"></script>
     <script src ="placar.js"></script>
+    <script src ="objetoJogo.js"></script>
     <script src ="comida.js"></script>
     <script src ="jogo.js"></script>
+
 </body>
 </html>
